--- a/techswap-backend/package.json
+++ b/techswap-backend/package.json
@@ -32,13 +32,16 @@
     "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-rate-limit": "^8.1.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.19.1",
     "multer": "^2.0.2",
+    "querystring": "^0.2.1",
     "socket.io": "^4.8.1",
     "zod": "^3.23.8"
   }
