--- a/techswap-backend/tsconfig.json
+++ b/techswap-backend/tsconfig.json
@@ -14,7 +14,8 @@
         "resolveJsonModule": true,
         "moduleResolution": "node",
         "allowSyntheticDefaultImports": true,
-        "sourceMap": true
+        "sourceMap": true,
+        "allowJs": true
     },
     "include": [
         "src/**/*"
