--- a/techswap-backend/package.json
+++ b/techswap-backend/package.json
@@ -24,9 +24,9 @@
     "@types/node": "^24.7.2",
     "@types/socket.io": "^3.0.1",
     "nodemon": "^3.1.10",
+    "rimraf": "^5.0.0",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.9.3",
-    "rimraf": "^5.0.0"
+    "typescript": "^5.9.3"
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
@@ -44,6 +44,7 @@
     "multer": "^2.0.2",
     "querystring": "^0.2.1",
     "socket.io": "^4.8.1",
+    "ts-node": "^10.9.2",
     "zod": "^3.23.8"
   }
 }
